Enviando notebook corrigido com respostas das perguntas.
Co-authored-by: ArturVinicius <arturv98@gmail.com>

--- a/internal_quality_analysis-sonarqube.ipynb
+++ b/internal_quality_analysis-sonarqube.ipynb
@@ -1661,6 +1661,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A análise nos mostrou que entre os microsserviços do backend a APISaude é a que possui menor grau de mantenabilidade, com a média do grau de mantenabilidade 29%. Esse cálculo é baseado na qualidade do código (bloco 24), que por sua vez é baseado nas métricas de duplicidade, quantidade de comentários e complexidade."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O microserviço que apresenta o pior indicador de confiabilidade é o APIForum, a métricas que formam o indicador de confiabilidade são relacionadas a testes, e como esse microserviço não teve o desenvolvimento de testes isso explica o resultado. Um alternativa para melhorar esse indicador de confiabilidade seria desenvolvendo testes e aumentando a porcentagem de cobertura do código."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Durante o desenvolvimento do projeto a equipe enfrentou problemas e acabou negligenciando a qualidade do software, o que é demonstrado na análise dos dados de modo que todos do indicadores de qualidade sofreram diminuições consideráveis comparadas a como estava no inicio do desenvolvimento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Quality characteristic indicator"
    ]
   },
